--- a/src/pages/coursePage/course.css
+++ b/src/pages/coursePage/course.css
@@ -2,9 +2,33 @@
     margin: 0;
     padding: 0%;
 }
+/* --------------appbar------------------ */
 .linksgroup{
 display: flex;
 }
 .link{
     padding-right: 5rem;
 }
+/* ----------------feed----------------- */
+.feedcontainer{
+    margin-top: 80px;
+    margin-right: 60px;
+    display: flex;
+    justify-content: center;
+    
+    
+}
+.vidtitle{
+    font-size: 30px;
+    text-align: center;
+}
+.title{
+    padding-bottom: 3rem;
+}
+
+/* ---------------sidebarcontainer----------- */
+.sidebarcontainer{
+    margin-top: 0%;
+}
+
+
